--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,13 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --title-bg-color: #2f303a;
+  --bg-image: #c4c4c4;
   --primary-bg-color: #f5f4fa;
   --primary-white-color: #ffffff;
   --contacts-color: rgba(255, 255, 255, 0.6);
   --border-color: #eeeeee;
   --container-color: #ececec;
+  --icon-color: #afb1b8;
   --item: 3;
   --indent: 30px;
 }
@@ -105,7 +107,10 @@ p {
   margin-right: 50px;
 }
 .site-nav .link {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   padding-top: 32px;
   padding-bottom: 32px;
 
@@ -119,6 +124,11 @@ p {
 .site-nav .contacts-details {
   color: var(--primary-text-color);
 }
+.mail-icon,
+.phone-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
@@ -130,10 +140,17 @@ p {
 /* Hero */
 
 .hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 200px;
   padding-bottom: 200px;
 
-  background-color: var(--title-bg-color);
+  background-color: var(--bg-image);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/img-hero.jpg');
+  background-position: center;
 }
 .hero-title {
   max-width: 696px;
@@ -156,6 +173,7 @@ p {
   border: none;
   min-width: 200px;
   padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   color: var(--primary-white-color);
   background-color: var(--accent-color);
@@ -178,6 +196,19 @@ p {
 }
 .feature-list > .section-card:not(:last-child) {
   margin-right: 30px;
+}
+.feature-icon-container {
+  width: 270px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 30px;
+
+  background-color: var(--primary-bg-color);
+}
+.feature-icon {
 }
 .feature-list .title {
   margin-bottom: 10px;
@@ -228,6 +259,8 @@ p {
 }
 .team-list .section-card {
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 
   background-color: var(--primary-white-color);
 
@@ -244,10 +277,77 @@ p {
   line-height: 1.19;
 }
 .team-list .text {
-  padding-bottom: 30px;
+  margin-bottom: 16px;
 
   font-size: 16px;
   line-height: 1.19;
+}
+.social-media {
+  display: flex;
+  justify-content: center;
+
+  padding-bottom: 30px;
+}
+.social-media-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 44px;
+  height: 44px;
+  background-color: var(--primary-white-color);
+  color: var(--icon-color);
+  border-radius: 50%;
+}
+.social-media-link:hover,
+.social-media-link:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+.social-media-icon {
+  fill: currentColor;
+}
+/* .social-media-link:hover .social-media-icon,
+.social-media-link:focus .social-media-icon {
+  fill: var(--primary-white-color);
+  background-color: var(--accent-color);
+} */
+
+/* Clients */
+
+.client-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.client-group {
+  width: 170px;
+  height: 92px;
+
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
+  padding: 16px 32px;
+}
+.client-group:hover {
+  border: 1px solid var(--accent-color);
+}
+.client-group:hover .client-icon {
+  fill: var(--accent-color);
+}
+.client-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 106px;
+  height: 60px;
+  color: var(--icon-color);
+}
+.client-icon {
+  fill: currentColor;
 }
 
 /* Contacts */
@@ -257,7 +357,46 @@ p {
   padding-bottom: 60px;
   background-color: var(--title-bg-color);
 }
+.contacts-group {
+  display: inline-flex;
+  align-items: baseline;
+}
+.contacts-adress {
+  margin-right: 70px;
+}
+.contacts-media-text {
+  margin-bottom: 20px;
 
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+
+  color: var(--primary-white-color);
+}
+.contacts-social-media {
+  display: flex;
+  justify-content: center;
+}
+.contacts-media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--primary-white-color);
+  border-radius: 50%;
+}
+.contacts-media-link:hover,
+.contacts-media-link:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+}
+.contacts-media-icon {
+  fill: currentColor;
+}
 .logo-secondary {
   color: var(--primary-white-color);
 }
@@ -327,6 +466,7 @@ p {
 .button:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .current-button {
   background-color: var(--accent-color);
@@ -334,6 +474,14 @@ p {
 }
 /* Exemples */
 
+.exemples .item {
+  display: block;
+}
+.exemples .item:hover,
+.exemples .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .exemples-content {
   padding: 20px 24px;
 
